视频通话ui、自定义消息未读相关（未读消息圈1还没解决）

--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">LatteEC</string>
+    <string name="app_name">壹家</string>
     <string name="back_icon">&#060;</string>
 </resources>
