--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="health_seft_main_warn">亲，点击下方按钮进行测量，小壹将通过你的指尖脉搏波来测量（心率、血氧）等结果</string>
     <string name="health_self_begin_warn">闪光灯和摄像头属于非专业的采集设备，建议您多次测量和观察</string>
     <string name="health_self_begin_button">开始测量</string>
+
+    <string name="health_self_wait_text">%1$ds后为您开始测量</string>
+    <string name="health_self_wait_warn">请您轻轻的将食指放在摄像头上，注意不要遮挡闪光灯，并保持姿势</string>
 </resources>
