--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="health_self_mesure_error">手指未完全覆盖摄像头，请您调整手指位置</string>
     <string name="health_self_mesure_right">数据采集中，请保持姿势直到数据采集结束</string>
     <string name="health_self_mesuring">正在检测中...</string>
+    <string name="health_self_result_warn">测量完成！本次测量结果不代表医学测量数据</string>
 </resources>
