--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -17,6 +17,31 @@
 
     <string name="health_self_result_close">返回</string>
 
+    <string name="add_parents_title">请选择添加父母</string>
+
+    <string name="add_parents_skip">跳过</string>
+
+    <string name="add_parents_father">父亲</string>
+    <string name="add_parents_mather">母亲</string>
+    <string name="add_parents_name">名字：</string>
+    <string name="add_parents_birth">生日：</string>
+    <string name="add_parents_phone">手机号：</string>
+    <string name="add_parents_relation">您与老人的关系：</string>
+    <string name="add_parents_son">儿子</string>
+    <string name="add_parents_dau">女儿</string>
+    <string name="add_parents_father_info">父亲信息</string>
+    <string name="add_parents_mather_info">母亲信息</string>
+
+    <string name="add_parents_father_name_hint">请输入父亲姓名</string>
+    <string name="add_parents_mather_name_hint">请输入母亲姓名</string>
+
+    <string name="add_parents_father_birth_hint">请选择父亲生日</string>
+    <string name="add_parents_mather_birth_hint">请选择母亲生日</string>
+
+    <string name="add_parents_father_phone_hint">请输入父亲手机号</string>
+    <string name="add_parents_mather_phone_hint">请输入母亲手机号</string>
+    <string name="add_parents_done">完成</string>
+
     <string-array name="robot_remind_voice_seek">
         <item>0</item>
         <item>20</item>
