--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">壹家</string>
     <string name="back_icon">&#060;</string>
 
+    <string name="xy_online">小壹在线</string>
+    <string name="xy_unonline">小壹离线</string>
+    <string name="add_parents_robot_name">小壹机器人</string>
+
     <string name="health_seft_test">健康自测</string>
 
     <string name="health_seft_main_warn">亲，点击下方按钮进行测量，小壹将通过你的指尖脉搏波来测量（心率、血氧）等结果</string>
@@ -41,7 +45,6 @@
     <string name="add_parents_father_phone_hint">请输入父亲手机号</string>
     <string name="add_parents_mather_phone_hint">请输入母亲手机号</string>
     <string name="add_parents_done">完成</string>
-    <string name="add_parents_robot_name">小壹机器人</string>
 
     <string-array name="robot_remind_voice_seek">
         <item>0</item>
