--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="user_detail_protector">看护人</string>
     <string name="user_detail_no_permission">无权限</string>
 
+    <string name="num_of_relation">%1$d位亲</string>
+
     <string name="phone_calling">正在呼叫...</string>
 
     <string name="get_data_error">用户信息获取失败，请稍后再试</string>
