--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -62,6 +62,8 @@
 
     <string name="get_data_error">用户信息获取失败，请稍后再试</string>
 
+    <string name="delete_family_error">删除用户失败，请稍后再试</string>
+
     <string-array name="robot_remind_voice_seek">
         <item>0</item>
         <item>20</item>
