--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
 
     <string name="delete_family_error">删除用户失败，请稍后再试</string>
 
+    <string name="parent_has_not_confirm">对方还未确认接受邀请，请稍后再试</string>
+
     <string-array name="robot_remind_voice_seek">
         <item>0</item>
         <item>20</item>
