机器人列表添加父母展现方式修改

--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -21,7 +21,9 @@
 
     <string name="health_self_result_close">返回</string>
 
-    <string name="add_parents_title">请选择添加父母</string>
+    <string name="add_parents_title">请选择添加我的父母</string>
+
+    <string name="add_own_parents">添加我的父母</string>
 
     <string name="add_parents_skip">跳过</string>
 
