--- a/common_bokang/src/main/res/values/strings.xml
+++ b/common_bokang/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="xy_unonline">小壹离线</string>
     <string name="add_parents_robot_name">小壹机器人</string>
 
+    <string name="robot_name">小壹</string>
     <string name="health_seft_test">健康自测</string>
 
     <string name="health_seft_main_warn">亲，点击下方按钮进行测量，小壹将通过你的指尖脉搏波来测量（心率、血氧）等结果</string>
